src/objects/Field_Officer_Productivity__c.object
<CustomObject>
    <description>Object to hold the answers from a given Field officer support survey</description>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adoption__c</fullName>
        <label>Adoption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CKW_Motivation__c</fullName>
        <label>CKW Motivation</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Motivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demotivated/Frustrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Farmers_Opinion__c</fullName>
        <label>Farmers Opinion</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent/Helpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor/Not relevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farmers_Present__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Farmers Present</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Field Officer Productivity</label>
    <nameField>
        <displayFormat>FOP{YY}{MM}{DD}{000000}</displayFormat>
        <label>Field Officer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Officer Productivity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>